<resources>
    <string name="app_name">DailyBugle</string>
    <string name="menu_title">This</string>
    <string name="database_name">news_row</string>
    <string-array name="choice">
        <item>"business"</item>
        <item>"entertainment"</item>
        <item>"general"</item>
        <item>"health"</item>
        <item>"science"</item>
        <item>"sports"</item>
        <item>"technology"</item>
    </string-array>
    <string name="appwidget_text">DailyBugle</string>
    <string name="add_widget">Add widget</string>
    <string name="please_add_stories_to_display_here">Please Add Stories to Display Here</string>
    <string name="Click_to_Add">Click to Add</string>
    <string name="author_of_article">Author Of Article:</string>
    <string name="published_at">Published At :</string>
    <string name="description">Description :</string>
    <string name="date">date</string>
    <string name="more_details">MORE DETAILS :</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="removefav">Remove Favourite</string>
    <string name="read_more">READ MORE</string>
    <string name="enter_keyword_to_search">Enter Keyword To Search:</string>
    <string name="search_image">Search Image</string>
    <string name="header_image">header image</string>
    <string name="widget_image">Widget Image</string>
    <string name="news">news</string>
    <string name="image_for_news">Image for news</string>
    <string name="favourites">Favourites</string>
    <string name="search">search</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="technology">technology</string>
    <string name="business">business</string>
    <string name="sports">sports</string>
    <string name="general">general</string>
    <string name="entertainment">entertainment</string>
    <string name="health">health</string>
    <string name="science">science</string>
</resources>
