<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:id="@+id/empty_widget_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/empty_widget_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:gravity="center"
            android:text="@string/please_add_stories_to_display_here"
            android:textColor="#000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/empty_widget_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="#fff"

            android:text="@string/Click_to_Add"
            android:textColor="#fff" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/data_widget_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appwidget_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp" />


        <ListView
            android:id="@+id/widgetlistview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </ListView>

    </LinearLayout>


</RelativeLayout>