<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activities.SearchActivity">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="0.7"
            android:hint="@string/enter_keyword_to_search"
            android:inputType="text" />

        <ImageButton
            android:id="@+id/button"
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="-8dp"
            android:layout_weight="0.3"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/ic_search_black_24dp"
            android:contentDescription="@string/search_image"
            android:text="@string/search"
            android:textColor="@color/white" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/srecyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"
        android:layout_above="@+id/snavigation"
        >
    </android.support.v7.widget.RecyclerView>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/snavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav" />


</RelativeLayout>